[workspace]
members = [
  ".",
  "cli",
]

[package]
name = "bpflint"
version = "0.0.0"
edition = "2024"

[build-dependencies]
anyhow = "1.0"

[dependencies]
anyhow = "1.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tree-sitter = "0.25"
tree-sitter-c = "0.24"

[lints]
workspace = true

[workspace.lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[workspace.lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
