[package]
name = "bpflint-cli"
version = "0.0.0"
edition = "2024"
license = "MIT"

[build-dependencies]
anyhow = "1.0"
grev = "0.1.3"

[dependencies]
anyhow = "1.0"
bpflint = { version = "0.1", path = ".." }
clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"] }

[lints]
workspace = true
