[package]
name = "bpflinter"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/d-e-s-o/bpflint"
readme = "README.md"
categories = [
  "accessibility",
  "command-line-utilities",
  "compilers",
  "development-tools",
  "parser-implementations",
]
keywords = ["bpf", "linter", "lint", "cli"]
description = """
A command-line based linter for BPF C code.
"""

[build-dependencies]
anyhow = "1.0"
grev = "0.1.3"

[dependencies]
anyhow = "1.0"
bpflint = { version = "0.1", path = ".." }
clap = { version = "4.5", features = ["derive"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"] }

[dev-dependencies]
tempfile = { version = "3", default-features = false }

[lints]
workspace = true
